--- a/Part 2 Natural Language Processing Basics/Basic of spacy.ipynb
+++ b/Part 2 Natural Language Processing Basics/Basic of spacy.ipynb
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.lang.en.English at 0x116953f98>"
+       "<spacy.lang.en.English at 0x10f05a9b0>"
       ]
      },
      "execution_count": 3,
@@ -36,6 +36,180 @@
    ],
    "source": [
     "nlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = nlp(u'Rishav Tesla is looking at buying U.S. at $6 million')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rishav Tesla is looking at buying U.S. at $6 million"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rishav -> 96 -> PROPN -> compound\n",
+      "Tesla -> 96 -> PROPN -> nsubj\n",
+      "is -> 100 -> VERB -> aux\n",
+      "looking -> 100 -> VERB -> ROOT\n",
+      "at -> 85 -> ADP -> prep\n",
+      "buying -> 100 -> VERB -> pcomp\n",
+      "U.S. -> 96 -> PROPN -> dobj\n",
+      "at -> 85 -> ADP -> prep\n",
+      "$ -> 99 -> SYM -> quantmod\n",
+      "6 -> 93 -> NUM -> compound\n",
+      "million -> 93 -> NUM -> pobj\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc:\n",
+    "    print(token.text,'->',token.pos,'->',token.pos_,'->',token.dep_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x10f06b8d0>),\n",
+       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x110c78528>),\n",
+       " ('ner', <spacy.pipeline.pipes.EntityRecognizer at 0x110c78588>)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tagger', 'parser', 'ner']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.pipe_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc2 = nlp(u\"Tesla isn't    looking into start anymore.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla PROPN nsubj\n",
+      "is VERB ROOT\n",
+      "n't ADV neg\n",
+      "    SPACE \n",
+      "looking VERB acomp\n",
+      "into ADP prep\n",
+      "start NOUN pobj\n",
+      "anymore ADV advmod\n",
+      ". PUNCT punct\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc2:\n",
+    "    print(token.text,token.pos_,token.dep_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tesla"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PROPN'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc2[0].pos_"
    ]
   },
   {
